--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
     <button onclick="showReason()">Show Me!</button>
   </div>
   <script src="script.js"></script>
+  <!-- 1. Love Letter Pop-up -->
+<div id="popup" class="popup">
+  <div class="popup-content">
+    <span class="close" onclick="closePopup()">×</span> <!-- Close button -->
+    <h2>Your Love Letter 💖</h2> <!-- Title -->
+    <p id="loveLetterMessage">I love you so much, and every moment with you is magical. Forever yours!</p> <!-- Love message -->
+  </div>
+</div>
+
+<!-- 2. Button to show the pop-up -->
+<button onclick="showPopup()">Read My Love Letter</button> <!-- Button triggers pop-up -->
 </body>
 </html>
