--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="popup-content">
     <span class="close" onclick="closePopup()">×</span> <!-- Close button -->
     <h2>Your Love Letter 💖</h2> <!-- Title -->
-    <p id="loveLetterMessage">I love you so much, and every moment with you is magical. Forever yours!</p> <!-- Love message -->
+    <p id="loveLetterMessage">Jaya doling 🐻 !</p> <!-- Love message -->
   </div>
 </div>
 
