--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <div class="floating-hearts">
+    <span class="heart">💗</span>
+    <span class="heart">💖</span>
+    <span class="heart">💘</span>
+  </div>
+  
   <!-- Main container holding the love content -->
   <div class="container">
     <h1>💖 Reasons Why I Love You 💖</h1>
